# NRC

./: .coverage  .gitignore  LICENSE  LICENSE.md  LINKS.md  MODELS.md  NRC Workspace.code-workspace  README.md  compile_script.py  interactive_nrc_explorer.ipynb  mkdocs.yml  pyproject.toml  setup_venv.sh
.agents/: AGENTS.md
.github/prompts/: phi-spiral-projection-calculator.prompt.yml  ttt-modular-exclusion-tester.prompt.yml  tupt-lattice-signature-generator.prompt.yml
.github/workflows/: ci.yml  latex-build.yml  prompt-evals.yml  python-ci.yml
.hypothesis/constants/: 00c1a2aee030c4c3  034a816d9b43cc24  0bdf8590a58db4a3  0e612d95c26cd60e  0f68673a4e31a357  1fa82106c1f3dbfe  37d7dce85e0774e4  418fd5d40b07bb40  44bead4806754d38  47c957b9351ccfef  51bd5e149b8e20ca  535b19b9c28e9d85  5f8c4832bd24a868  635be1e999413042  69920c4903c86ab4  6b5c85e08648fa38  7deca2bdaf76f6f8  7e64d146c04027bd  87bbbe38f25d53d4  8d7863d40720148b  8d92e3fd7025f083  920b2514cf9e5ad0  96f6bb8a93c16998  a05c9151fa6e757a  addaa37995351720  b1dba8816cd97272  b3a3b74dc12f33ce  b5fa814b4b3d97bb  bc36f0026d0fae70  bc6a32eaabfe100f  c3f863d4e18ea38a  cd83f073a4c15e94  ce35c7e582bd5d76  d03ed8775990639b  d16a3503079cf4f8  d1b0ac6a81f5f3c0  d36c5a58cf74d127  d51108e4859b2a5c  d5738d41020762ec  d64ba1b3f3e90c59  (+6 more)
.legal_legacy/: LICENSE.md
docs/: 404.html  LINKS.md  Models.md  NRC-Playground-Guide.md  README.md  index.html  index.md  nrc-math.md
docs/Nexus-Resonance-Codex-tex-files/: Nexus-Resonance-Codex.aux  Nexus-Resonance-Codex.blg  Nexus-Resonance-Codex.tex  nrc.sty
docs/Nexus-Resonance-Codex-tex-files/abstract/: abstract.tex
docs/Nexus-Resonance-Codex-tex-files/appendices/: appendices.tex
docs/Nexus-Resonance-Codex-tex-files/applications/: applications.tex
docs/Nexus-Resonance-Codex-tex-files/conclusion/: conclusion.tex
docs/Nexus-Resonance-Codex-tex-files/core_definitions/: core_definitions.tex
docs/Nexus-Resonance-Codex-tex-files/core_transforms/: core_transforms.tex
docs/Nexus-Resonance-Codex-tex-files/disclaimer/: disclaimer.tex
docs/Nexus-Resonance-Codex-tex-files/high_dimensional/: high_dimensional.tex
docs/Nexus-Resonance-Codex-tex-files/introduction/: introduction.tex
docs/Nexus-Resonance-Codex-tex-files/modular_filtering/: modular_filtering.tex
docs/Nexus-Resonance-Codex-tex-files/phi_weighted_series/: phi_weighted_series.tex
docs/demos/: math-playground.html  tupt-lwe-tester.html
docs/proofs/: index.md
examples/: biological_proxy_sim.py  tupt_lattice_crypto.py  variance_reduction.py  yang_mills_qrt.py  zero_search.py
gradio/: README.md  app.py
huggingface/: generate_dataset.py  nrc_dataset.parquet
proofs/: proof_01_entropy_collapse.py  proof_02_modular_exclusion.py  proof_03_qrt_resonance.py
site/: 404.html  index.html  sitemap.xml
site/LINKS/: index.html
site/Nexus-Resonance-Codex-tex-files/applications/: applications.tex
site/Nexus-Resonance-Codex-tex-files/core_transforms/: core_transforms.tex
site/Nexus-Resonance-Codex-tex-files/high_dimensional/: high_dimensional.tex
site/Nexus-Resonance-Codex-tex-files/introduction/: introduction.tex
site/Nexus-Resonance-Codex-tex-files/phi_weighted_series/: phi_weighted_series.tex
site/demos/: math-playground.html
site/nrc-math/: index.html
site/proofs/: index.html
site/search/: search_index.json
src/nrc/: __init__.py
src/nrc/crypto/: __init__.py
src/nrc/lattice/: __init__.py  phi_projection.py
src/nrc/math/: __init__.py  gtt_topology.py  mst.py  phi.py  prime_resonance.py  qrt.py  quantum_shadow_veil.py  tupt_exclusion.py
src/nrc/metamaterials/: __init__.py
src/nrc_math/: __about__.py  __init__.py  primitives.py
tests/: test_primitives.py
wiki/: API-Reference.md  Contributing.md  Getting-Started.md  Home.md  Models.md  Usage.md
