[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nrc"
dynamic = ["version"]
description = "Core mathematics for the Nexus Resonance Codex (QRT, MST, TUPT, Phi)."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.md"}
keywords = ["mathematics", "golden-ratio", "resonance", "quantum", "physics"]
authors = [
    { name = "James Trageser", email = "Nexus-Resonance-Codex@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
    "mpmath>=1.3.0",
    "sympy>=1.12",
]

[project.urls]
Documentation = "https://github.com/Nexus-Resonance-Codex/NRC"
Issues = "https://github.com/Nexus-Resonance-Codex/NRC/issues"
Source = "https://github.com/Nexus-Resonance-Codex/NRC"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
]

[tool.hatch.version]
path = "src/nrc/__about__.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I"]
exclude = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
