[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nrc-math"
version = "1.0.0"
description = "Institutional-Grade Core Mathematics for the Nexus Resonance Codex"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "CC-BY-NC-SA-4.0"}
authors = [
    {name = "James Trageser", email = "NexusResonanceCodex@gmail.com"}
]
keywords = ["nexus-resonance-codex", "mathematics", "phi", "lattice-resonance", "tupt", "qrt", "mst"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "numpy>=1.26.0",
    "mpmath>=1.3.0",
    "sympy>=1.13.0",
    "torch>=2.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "hypothesis>=6.98.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/nrc_math"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "ANN", "D"]
ignore = ["D100", "D104", "ANN101", "ANN204"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=nrc_math --cov-report=term-missing --cov-fail-under=95"
