[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nrc-math"
version = "2.2.1"
description = "Professional-Grade Core Mathematics for the Nexus Resonance Codex"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "CC-BY-NC-SA-4.0"}
authors = [
    {name = "James Trageser", email = "NexusResonanceCodex@gmail.com"}
]
dependencies = [
    "numpy>=1.26.0",
    "mpmath>=1.3.0",
    "sympy>=1.13.0",
    "torch>=2.2.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/nrc_math"]
